--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "express-fileupload": "^1.4.0",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
